// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar invitation lifecycle > keeps UID, advances sequence, and emits cancellation semantics 1`] = `
{
  "canceled": {
    "attachment": {
      "content": "BEGIN:VCALENDAR
PRODID:-//OpenSession//Calendar Invitations 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:CANCEL
BEGIN:VEVENT
UID:evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.t
 est
DTSTAMP:20260810T200000Z
DTSTART:20260915T180000Z
DTEND:20260915T183000Z
SEQUENCE:2
STATUS:CANCELLED
ORGANIZER;CN="OpenSession Program Team":mailto:program@example.test
ATTENDEE;CN="Alex Chen";CUTYPE=INDIVIDUAL;ROLE=REQ-PARTICIPANT;PARTSTAT=ACC
 EPTED;RSVP=FALSE:mailto:alex@example.test
SUMMARY:Opening the reliable-agent stack
LOCATION:Cowell Theater\\, Fort Mason Center\\, San Francisco
DESCRIPTION:Event: AI Engineer World's Fair\\nWhen: Tuesday\\, September 15\\,
  2026 at 11:00 AM - Tuesday\\, September 15\\, 2026 at 11:30 AM (America/Los
 _Angeles\\; UTC-07:00)\\nWhere: Cowell Theater\\, Fort Mason Center\\, San Fra
 ncisco\\n\\nA practical opening tour of the systems behind reliable agents.\\
 n\\nDetails: https://events.example.test/ai-engineering-summit
URL:https://events.example.test/ai-engineering-summit
END:VEVENT
END:VCALENDAR
",
      "contentType": "text/calendar; charset=utf-8; method=CANCEL",
      "filename": "invite-session_opening.ics",
      "method": "CANCEL",
    },
    "idempotencyKey": "calendar-invitation:v1:cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4:2:103df950e89babfaf3897962c55c6d02a97441d057b89cb7173777936ff6e773",
    "snapshot": {
      "attendee": {
        "email": "alex@example.test",
        "name": "Alex Chen",
      },
      "description": "Event: AI Engineer World's Fair
When: Tuesday, September 15, 2026 at 11:00 AM - Tuesday, September 15, 2026 at 11:30 AM (America/Los_Angeles; UTC-07:00)
Where: Cowell Theater, Fort Mason Center, San Francisco

A practical opening tour of the systems behind reliable agents.

Details: https://events.example.test/ai-engineering-summit",
      "dtstamp": "2026-08-10T20:00:00.000Z",
      "eventId": "event_ai_engineering_summit",
      "humanTime": "Tuesday, September 15, 2026 at 11:00 AM - Tuesday, September 15, 2026 at 11:30 AM (America/Los_Angeles; UTC-07:00)",
      "location": "Cowell Theater, Fort Mason Center, San Francisco",
      "method": "CANCEL",
      "organizationId": "org_open_session",
      "organizer": {
        "email": "program@example.test",
        "name": "OpenSession Program Team",
      },
      "publicUrl": "https://events.example.test/ai-engineering-summit",
      "roomId": "room_cowell",
      "sequence": 2,
      "seriesId": "cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4",
      "sessionId": "session_opening",
      "sourcePublicationVersion": 6,
      "sourceScheduleVersion": 8,
      "status": "CANCELLED",
      "summary": "Opening the reliable-agent stack",
      "time": {
        "endAt": "2026-09-15T18:30:00.000Z",
        "kind": "date_time",
        "startAt": "2026-09-15T18:00:00.000Z",
      },
      "timezone": "America/Los_Angeles",
      "uid": "evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.test",
      "version": 1,
    },
    "snapshotHash": "103df950e89babfaf3897962c55c6d02a97441d057b89cb7173777936ff6e773",
    "version": 1,
  },
  "initial": {
    "attachment": {
      "content": "BEGIN:VCALENDAR
PRODID:-//OpenSession//Calendar Invitations 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:REQUEST
BEGIN:VEVENT
UID:evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.t
 est
DTSTAMP:20260810T180000Z
DTSTART:20260915T170000Z
DTEND:20260915T173000Z
SEQUENCE:0
STATUS:CONFIRMED
ORGANIZER;CN="OpenSession Program Team":mailto:program@example.test
ATTENDEE;CN="Alex Chen";CUTYPE=INDIVIDUAL;ROLE=REQ-PARTICIPANT;PARTSTAT=ACC
 EPTED;RSVP=FALSE:mailto:alex@example.test
SUMMARY:Opening the reliable-agent stack
LOCATION:Cowell Theater\\, Fort Mason Center\\, San Francisco
DESCRIPTION:Event: AI Engineer World's Fair\\nWhen: Tuesday\\, September 15\\,
  2026 at 10:00 AM - Tuesday\\, September 15\\, 2026 at 10:30 AM (America/Los
 _Angeles\\; UTC-07:00)\\nWhere: Cowell Theater\\, Fort Mason Center\\, San Fra
 ncisco\\n\\nA practical opening tour of the systems behind reliable agents.\\
 n\\nDetails: https://events.example.test/ai-engineering-summit
URL:https://events.example.test/ai-engineering-summit
END:VEVENT
END:VCALENDAR
",
      "contentType": "text/calendar; charset=utf-8; method=REQUEST",
      "filename": "invite-session_opening.ics",
      "method": "REQUEST",
    },
    "idempotencyKey": "calendar-invitation:v1:cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4:0:98a021469c09914001c7056261337f0ec333fe08a6579b3c3e6c7aa9e09af020",
    "snapshot": {
      "attendee": {
        "email": "alex@example.test",
        "name": "Alex Chen",
      },
      "description": "Event: AI Engineer World's Fair
When: Tuesday, September 15, 2026 at 10:00 AM - Tuesday, September 15, 2026 at 10:30 AM (America/Los_Angeles; UTC-07:00)
Where: Cowell Theater, Fort Mason Center, San Francisco

A practical opening tour of the systems behind reliable agents.

Details: https://events.example.test/ai-engineering-summit",
      "dtstamp": "2026-08-10T18:00:00.000Z",
      "eventId": "event_ai_engineering_summit",
      "humanTime": "Tuesday, September 15, 2026 at 10:00 AM - Tuesday, September 15, 2026 at 10:30 AM (America/Los_Angeles; UTC-07:00)",
      "location": "Cowell Theater, Fort Mason Center, San Francisco",
      "method": "REQUEST",
      "organizationId": "org_open_session",
      "organizer": {
        "email": "program@example.test",
        "name": "OpenSession Program Team",
      },
      "publicUrl": "https://events.example.test/ai-engineering-summit",
      "roomId": "room_cowell",
      "sequence": 0,
      "seriesId": "cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4",
      "sessionId": "session_opening",
      "sourcePublicationVersion": 4,
      "sourceScheduleVersion": 7,
      "status": "CONFIRMED",
      "summary": "Opening the reliable-agent stack",
      "time": {
        "endAt": "2026-09-15T17:30:00.000Z",
        "kind": "date_time",
        "startAt": "2026-09-15T17:00:00.000Z",
      },
      "timezone": "America/Los_Angeles",
      "uid": "evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.test",
      "version": 1,
    },
    "snapshotHash": "98a021469c09914001c7056261337f0ec333fe08a6579b3c3e6c7aa9e09af020",
    "version": 1,
  },
  "rescheduled": {
    "attachment": {
      "content": "BEGIN:VCALENDAR
PRODID:-//OpenSession//Calendar Invitations 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:REQUEST
BEGIN:VEVENT
UID:evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.t
 est
DTSTAMP:20260810T190000Z
DTSTART:20260915T180000Z
DTEND:20260915T183000Z
SEQUENCE:1
STATUS:CONFIRMED
ORGANIZER;CN="OpenSession Program Team":mailto:program@example.test
ATTENDEE;CN="Alex Chen";CUTYPE=INDIVIDUAL;ROLE=REQ-PARTICIPANT;PARTSTAT=ACC
 EPTED;RSVP=FALSE:mailto:alex@example.test
SUMMARY:Opening the reliable-agent stack
LOCATION:Cowell Theater\\, Fort Mason Center\\, San Francisco
DESCRIPTION:Event: AI Engineer World's Fair\\nWhen: Tuesday\\, September 15\\,
  2026 at 11:00 AM - Tuesday\\, September 15\\, 2026 at 11:30 AM (America/Los
 _Angeles\\; UTC-07:00)\\nWhere: Cowell Theater\\, Fort Mason Center\\, San Fra
 ncisco\\n\\nA practical opening tour of the systems behind reliable agents.\\
 n\\nDetails: https://events.example.test/ai-engineering-summit
URL:https://events.example.test/ai-engineering-summit
END:VEVENT
END:VCALENDAR
",
      "contentType": "text/calendar; charset=utf-8; method=REQUEST",
      "filename": "invite-session_opening.ics",
      "method": "REQUEST",
    },
    "idempotencyKey": "calendar-invitation:v1:cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4:1:cc92b11d15a528ec12a35e8cbd15782af1b594f112b339fbf2b876ae48e16b24",
    "snapshot": {
      "attendee": {
        "email": "alex@example.test",
        "name": "Alex Chen",
      },
      "description": "Event: AI Engineer World's Fair
When: Tuesday, September 15, 2026 at 11:00 AM - Tuesday, September 15, 2026 at 11:30 AM (America/Los_Angeles; UTC-07:00)
Where: Cowell Theater, Fort Mason Center, San Francisco

A practical opening tour of the systems behind reliable agents.

Details: https://events.example.test/ai-engineering-summit",
      "dtstamp": "2026-08-10T19:00:00.000Z",
      "eventId": "event_ai_engineering_summit",
      "humanTime": "Tuesday, September 15, 2026 at 11:00 AM - Tuesday, September 15, 2026 at 11:30 AM (America/Los_Angeles; UTC-07:00)",
      "location": "Cowell Theater, Fort Mason Center, San Francisco",
      "method": "REQUEST",
      "organizationId": "org_open_session",
      "organizer": {
        "email": "program@example.test",
        "name": "OpenSession Program Team",
      },
      "publicUrl": "https://events.example.test/ai-engineering-summit",
      "roomId": "room_cowell",
      "sequence": 1,
      "seriesId": "cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4",
      "sessionId": "session_opening",
      "sourcePublicationVersion": 5,
      "sourceScheduleVersion": 8,
      "status": "CONFIRMED",
      "summary": "Opening the reliable-agent stack",
      "time": {
        "endAt": "2026-09-15T18:30:00.000Z",
        "kind": "date_time",
        "startAt": "2026-09-15T18:00:00.000Z",
      },
      "timezone": "America/Los_Angeles",
      "uid": "evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.test",
      "version": 1,
    },
    "snapshotHash": "cc92b11d15a528ec12a35e8cbd15782af1b594f112b339fbf2b876ae48e16b24",
    "version": 1,
  },
}
`;

exports[`calendar invitation lifecycle > renders an independently parseable initial request and exact replay 1`] = `
{
  "attachment": {
    "content": "BEGIN:VCALENDAR
PRODID:-//OpenSession//Calendar Invitations 1.0//EN
VERSION:2.0
CALSCALE:GREGORIAN
METHOD:REQUEST
BEGIN:VEVENT
UID:evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.t
 est
DTSTAMP:20260810T180000Z
DTSTART:20260915T170000Z
DTEND:20260915T173000Z
SEQUENCE:0
STATUS:CONFIRMED
ORGANIZER;CN="OpenSession Program Team":mailto:program@example.test
ATTENDEE;CN="Alex Chen";CUTYPE=INDIVIDUAL;ROLE=REQ-PARTICIPANT;PARTSTAT=ACC
 EPTED;RSVP=FALSE:mailto:alex@example.test
SUMMARY:Opening the reliable-agent stack
LOCATION:Cowell Theater\\, Fort Mason Center\\, San Francisco
DESCRIPTION:Event: AI Engineer World's Fair\\nWhen: Tuesday\\, September 15\\,
  2026 at 10:00 AM - Tuesday\\, September 15\\, 2026 at 10:30 AM (America/Los
 _Angeles\\; UTC-07:00)\\nWhere: Cowell Theater\\, Fort Mason Center\\, San Fra
 ncisco\\n\\nA practical opening tour of the systems behind reliable agents.\\
 n\\nDetails: https://events.example.test/ai-engineering-summit
URL:https://events.example.test/ai-engineering-summit
END:VEVENT
END:VCALENDAR
",
    "contentType": "text/calendar; charset=utf-8; method=REQUEST",
    "filename": "invite-session_opening.ics",
    "method": "REQUEST",
  },
  "idempotencyKey": "calendar-invitation:v1:cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4:0:98a021469c09914001c7056261337f0ec333fe08a6579b3c3e6c7aa9e09af020",
  "snapshot": {
    "attendee": {
      "email": "alex@example.test",
      "name": "Alex Chen",
    },
    "description": "Event: AI Engineer World's Fair
When: Tuesday, September 15, 2026 at 10:00 AM - Tuesday, September 15, 2026 at 10:30 AM (America/Los_Angeles; UTC-07:00)
Where: Cowell Theater, Fort Mason Center, San Francisco

A practical opening tour of the systems behind reliable agents.

Details: https://events.example.test/ai-engineering-summit",
    "dtstamp": "2026-08-10T18:00:00.000Z",
    "eventId": "event_ai_engineering_summit",
    "humanTime": "Tuesday, September 15, 2026 at 10:00 AM - Tuesday, September 15, 2026 at 10:30 AM (America/Los_Angeles; UTC-07:00)",
    "location": "Cowell Theater, Fort Mason Center, San Francisco",
    "method": "REQUEST",
    "organizationId": "org_open_session",
    "organizer": {
      "email": "program@example.test",
      "name": "OpenSession Program Team",
    },
    "publicUrl": "https://events.example.test/ai-engineering-summit",
    "roomId": "room_cowell",
    "sequence": 0,
    "seriesId": "cal_6fb2e87f10e90fb7db08e1891d238e2b76d9ddf4ba3751a4",
    "sessionId": "session_opening",
    "sourcePublicationVersion": 4,
    "sourceScheduleVersion": 7,
    "status": "CONFIRMED",
    "summary": "Opening the reliable-agent stack",
    "time": {
      "endAt": "2026-09-15T17:30:00.000Z",
      "kind": "date_time",
      "startAt": "2026-09-15T17:00:00.000Z",
    },
    "timezone": "America/Los_Angeles",
    "uid": "evt_077b496ea6c0281faf7efd43ce7e99975cbf08ade9311629@calendar.example.test",
    "version": 1,
  },
  "snapshotHash": "98a021469c09914001c7056261337f0ec333fe08a6579b3c3e6c7aa9e09af020",
  "version": 1,
}
`;
